# grib

./: Makefile  Makefile.g2clib  README.md  grib.cpp  grib2_to_grib1.c  grib2_to_grib1_mem.c  grib2dec.cpp  grib2decode.cpp  gtest.c
CISL/: grib2_access.c  grib2to1.c  grib_access.c  unpackgrib.c  unpackgrib2.c
CISL.new/: CMakeLists.txt  Makefile  get_bits.h  grib1.h  grib1_unpack.c  grib1_unpack.h  grib2.h  grib2_to_grib1.c  grib2_unpack.c  grib2_unpack.h  set_bits.c  set_bits.h  unpackgrib1.c  unpackgrib1.h  unpackgrib2.c  unpackgrib2.h
libgrib/: CMakeLists.txt  Makefile  bits.c  bits.h  conv_float.c  conv_float.h  get_bits.c  grib1.h  grib1_unpack.c  grib1_unpack.h  grib1_write.c  grib1_write.h  grib2_conv.c  grib2_conv.h  grib2_unpack.c  grib2_unpack.h
libgrib2/: Makefile  bitset.hpp  bittest.cpp  g2dec.cpp  gfs.t00z.pgrbf00.grib2  grib2.cpp  grib2.hpp  grib2_unpack.cpp  grib2_unpack.hpp  octets.hpp
